# hyprexpo

./: .gitignore  CMakeLists.txt  Dispatchers.cpp  Dispatchers.hpp  ExpoGesture.cpp  HyprexpoConfig.hpp  HyprexpoLogic.cpp  HyprexpoLogic.hpp  HyprlandConfigCompat.hpp  Makefile  Overview.cpp  Overview.hpp  OverviewInteraction.cpp  OverviewInternal.hpp  OverviewPassElement.cpp  OverviewPassElement.hpp  OverviewRender.cpp  PluginConfig.cpp  PluginConfig.hpp  README.md  RELEASING.md  VERSION  default.nix  flake.nix  globals.hpp  hyprpm.toml  main.cpp  meson.build  overview.cpp  overview.hpp
.github/workflows/: deploy-site.yml  release.yml  site-check.yml
docs/: index.md  package-lock.json  package.json  troubleshooting.md
docs/.vitepress/: config.ts
docs/configuration/: keyboard.md  labels-borders.md  options.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: lua-gestures.md  migration.md  multi-monitor.md  runtime-smoke.md
docs/reference/: compatibility.md  dispatchers.md
scripts/: build-docs.sh  build-site.sh  dev-link.sh  dev-watch.sh  prepare-vitepress-directory-urls.mjs  run-nested.sh  serve-docs.sh  serve-site.sh  verify-site-dist.sh  version.sh
site/: index.html  package-lock.json  package.json  vite.config.js
site/src/: main.js  styles.css
tests/: HyprexpoLogicTests.cpp  OverviewSourceTests.cpp
tools/: hyprexpo-migrate-config.py
